# perception

./: .gitignore  README.md  perch.rosinstall
cuda_icp/: CMakeLists.txt  icp.cpp  icp.cu  package.xml  test.cpp
cuda_icp/include/cuda_icp/: common.h  depth_scene.h  helper.h  icp.h  pcd_scene.h
cuda_icp/scene/: common.cpp  common.cu
cuda_icp/scene/depth_scene/: depth_scene.cpp  depth_scene.cu
cuda_icp/scene/pcd_scene/: pcd_scene.cpp  pcd_scene.cu
cuda_renderer/: CMakeLists.txt  compute_cost.cu  knncuda.cu  package.xml  renderer.cpp  renderer.cu  test.cpp
cuda_renderer/include/cuda_renderer/: common.cuh  knncuda.h  renderer.h
kinect_sim/: CMakeLists.txt  manifest.xml  package.xml
kinect_sim/include/kinect_sim/: camera_constants.h  model.h  range_likelihood.h  scene.h  simulation_io.hpp  sum_reduce.h
kinect_sim/src/: camera.cpp  glsl_shader.cpp  model.cpp  range_likelihood.cpp  simulation_io.cpp  sum_reduce.cpp
kinect_sim/tools/: CMakeLists.txt  sim_terminal_demo.cpp  sim_test_performance.cpp  sim_test_simple.cpp  sim_viewer.cpp
object_recognition_node/: CMakeLists.txt  manifest.xml  package.xml
object_recognition_node/action/: DoPerch.action
object_recognition_node/include/object_recognition_node/: object_localizer_service.h  perception_interface.h
object_recognition_node/launch/: obj_recognition_node.launch  object_localizer.launch  pr2_conveyor_object_recognition.launch  pr2_object_recognition.launch  roman_object_recognition.launch  roman_object_recognition_robot.launch  walker_object_recognition_robot.launch
object_recognition_node/rviz/: pr2_conveyor.rviz  realsense_camera_robot.rviz
object_recognition_node/scripts/: pr2_perch_client.py
object_recognition_node/site/: index.html  perch_interface.js  style.css
object_recognition_node/site/include/roslibjs/: VERSION
object_recognition_node/src/: object_localizer_service.cpp  object_recognition_node.cpp  perception_interface.cpp
object_recognition_node/src/test/: object_localizer_client_example.cpp
object_recognition_node/srv/: LocalizeObjects.srv
perception_utils/: CMakeLists.txt  manifest.xml  package.xml
perception_utils/include/perception_utils/: pcl_serialization.h  pcl_typedefs.h  perception_utils.h  pose_evaluator.h
perception_utils/include/perception_utils/vfh/: vfh_pose_estimator.h
perception_utils/src/: perception_utils.cpp  pose_evaluator.cpp
perception_utils/src/vfh/: vfh_pose_estimator.cpp
perception_utils/tools/: align_pcd_to_world.cpp  align_pcd_to_world_with_table.cpp  depth_image_smoother.cpp  viewpoint_renderer.cpp
perception_utils/tools/vfh/: vfh_generate_views.cpp  vfh_test.cpp  vfh_train.cpp
sbpl_perception/: CMakeLists.txt  manifest.xml  package.xml
sbpl_perception/config/: apc_config.yaml  apc_objects.xml  camera_config.yaml  demo_env_config.yaml  demo_planner_config.yaml  env_config.yaml  experiments_env_config.yaml  experiments_planner_config.yaml  household_objects.xml  planner_config.yaml  pr2_conv_env_config.yaml  pr2_conv_planner_config.yaml  pr2_env_config.yaml  pr2_planner_config.yaml  pr3_env_config.yaml  pr3_planner_config.yaml  roman_camera_config.yaml  roman_env_config.yaml  roman_objects.xml  roman_planner_config.yaml  sim_household_objects.xml  walker_env_config.yaml  ycb_objects.xml
sbpl_perception/data/crate/: crate_test.ply
sbpl_perception/data/scripts/: download_demo_models.sh  download_experiment_data.sh
sbpl_perception/experiments/: ground_truth.txt  symmetries.txt
sbpl_perception/experiments/scripts/: GetIDToPosesMap.m  GetIDToSymmetriesMap.m  analyze_results.m  analyze_stats.m  compare_baselines.m  compare_discretization.m  compare_lazy.m  compare_perch_cnn.py  compare_rcnn.m  compute_errors.m  computer_errors.m  generate_dataset.py  prepare_dataset.py  roi_saver.sh  run_experiments.sh  run_greedy.py  run_perch.py  run_perch.sh  run_single_experiments.sh  split_dataset.py
sbpl_perception/experiments/scripts/plotting_scripts/: plot_baseline_comparison.m  plot_disc.m  plot_lazy.m  plot_rcnn_comparison.m  plot_rcnn_times.m
sbpl_perception/experiments/src/: greedy_icp.cpp  ground_truth_parser.cpp  perch.cpp  perch_fat.cpp  perch_single_object.cpp  roi_saver.cpp  sixd_perch.cpp  vfh_estimator.cpp  view_generator.cpp
sbpl_perception/include/sbpl_perception/: config_parser.h  discretization_manager.h  env_globals.h  graph_state.h  mpi_utils.h  object_model.h  object_recognizer.h  object_state.h  pcl_typedefs.h  perception_interface.h  perception_utils.h  rcnn_heuristic.h  rcnn_heuristic_factory.h  render_views_cylinder.h  search_env.h  vfh_pose_estimation.h
sbpl_perception/include/sbpl_perception/utils/: dataset_generator.h  object_utils.h  utils.h
sbpl_perception/launch/: apc_test.launch  demo.launch  experiments.launch  generate_dataset.launch  heuristic_test.launch  object_detection.launch  sim_test.launch  ycb_demo.launch
sbpl_perception/src/: compute_cost.cu  config_parser.cpp  discretization_manager.cpp  graph_state.cpp  object_model.cpp  object_recognition_node.cpp  object_recognizer.cpp  object_state.cpp  perception_interface.cpp  perception_utils.cpp  rcnn_heuristic.cpp  rcnn_heuristic_factory.cpp  render_views_cylinder.cpp  sbpl_perception_node.cpp  search_env.cpp  vfh_generate_views.cpp  vfh_pose_estimation.cpp  vfh_test.cpp  vfh_train.cpp
sbpl_perception/src/ColorSpace/: ColorSpace.cpp  Comparison.cpp  Conversion.cpp
sbpl_perception/src/experiments/: demo.cpp  experiments.cpp  heuristic_test.cpp  search_mpi_test.cpp  sim_test.cpp  ycb_demo.cpp
sbpl_perception/src/scripts/: render_poses.py
sbpl_perception/src/scripts/tools/: convert_shapestacks_coco.py  visualize_shapestacks_coco.py
sbpl_perception/src/scripts/tools/fat_dataset/: config.yaml  config_can_dataset.yaml  mar1.py  (+12 more)
sbpl_perception/src/utils/: dataset_generator.cpp  generate_dataset.cpp  object_utils.cpp  utils.cpp
sbpl_perception/tests/: hash_manager_test.cpp  states_test.cpp
sbpl_perception/visualization/: generate_movie.m
sbpl_perception/visualization/NewMap1_reduced_2_000000_left/: log.txt  output_poses.txt  output_stats.txt
(+7 files in other folders)
