<package>
  <name>cuda_icp</name>
  <version>1.0.0</version>
  <description>renderer</description>
  <maintainer email="shanshax@cmu.edu">Shanshan Xie</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/sbpl_perception</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Shanshan Xie</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>cv_bridge</build_depend>



  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
 <build_depend>rospy</build_depend>

  <!-- <build_depend>libfcl&#45;dev</build_depend> -->
  <!-- <build_depend>libccd&#45;dev</build_depend> -->

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>cv_bridge</run_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
 
  <run_depend>rospy</run_depend>

  <!-- <run_depend>libfcl&#45;dev</run_depend> -->
  <!-- <run_depend>libccd&#45;dev</run_depend> -->

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>cv_bridge</test_depend> -->
  <!-- <test_depend>kinect_sim</test_depend> -->
  <!-- <test_depend>perception_utils</test_depend> -->
  <!-- <test_depend>pcl_ros</test_depend> -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>roslib</test_depend> -->
  <!-- <test_depend>sbpl</test_depend> -->
  <!-- <test_depend>sbpl_utils</test_depend> -->

<export>
    <cpp lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib -lsbpl_perception" cflags="-I${prefix}/include -O3 -DROS"/>
</export>

</package>
